Bug 1616342 - Add Unity-related library to TSan suppression list. r=froydnj

Differential Revision: https://phabricator.services.mozilla.com/D63309

--HG--
extra : moz-landing-system : lando